--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -301,7 +301,7 @@ a:hover, a:focus{
 }
 .main-btn{
     /*background-color: #316E33;*/
-    border-color: #749649;
+    border-color: 1px solid #749649;
     border-radius: 10px;
     height: 40px;
     border-radius: 20px;
@@ -312,19 +312,22 @@ a:hover, a:focus{
     color: #fff;
     text-align: center;
     background: #749649;
+    transition: .3s;
+    -webkit-transition: .3s;
     /* background: -moz-linear-gradient(left, #316E33 12%, #308d32 54%);
     background: -webkit-linear-gradient(left, #316E33 12%,#308d32 54%); 
     background: linear-gradient(to right, #316E33 12%,#308d32 54%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#316E33', endColorstr='#308d32',GradientType=1 );  */
 }
+.main-btn:focus, .main-btn:hover{
+    outline: 0px;
+    color: #fff;
+    background: #316E33!important;
+    background-color: #316E33!important;
+    border-color: #316E33
+}
 .third-section img{
     max-width: 100%;
-}
-.main-btn:hover, .main-btn:focus, .main-btn:active{
-    color: #fff;
-    background-color: #749649!important;
-    border-color: #749649;
-    box-shadow: none;
 }
 .btn-primary.main-btn:not(:disabled):not(.disabled):active{
     color: #fff;
@@ -1634,6 +1637,47 @@ h4.brown{
     opacity: 1
 }
 
+.cont-register{
+    max-width: 100%;
+    background: #fff;
+    padding: 20px;;
+    position: relative;
+    z-index: 1000;
+    border-radius: 10px
+}
+.cont-register img{
+    width: 120px;
+    margin: 0px auto 20px;
+}
+.cont-register h4{
+    color: #666
+}
+.cont-register .main-btn{
+    width: 100%;
+}
+.login{
+    background: url(../images/login.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    min-height: 100vh;
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center
+
+}
+.login::after{
+    position: absolute;
+    content: "";
+    background: rgba(0,0,0,.5);
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 50
+}
 @media screen and (min-width:640px) and (max-width:1200px) {
     .price-page .pricing-left .inner-wrapper {
         width: 500px
